--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Top 5 Tea-Producing Countries</title>
+    <style>
+    body {
+      font-family: Georgia, serif;
+      background-color: #c2f7ff;
+    }
+    h1 {
+      font-family: sans-serif;
+    }
+    figcaption {
+      color: grey;
+    }
+    </style>
   </head>
   <body>
   <h1>Top 5 Tea-Producing Countries</h1>
-  <img src="images/fancy cat tea.jpg" alt="fancy cat pouring tea">
+  <figure>
+    <img src="images/fancy cat tea.jpg" alt="fancy cat pouring tea"><figcaption> A Fancy Cat Pours Tea</figcaption>
+  </figure>
+  <p>Ever wonder where Earl Grey actually comes from? You'll be surprised who exports the most tea after you check out the list down below.</p>
   <p>1. China</p>
   <p>2. India</p>
   <p>3. Kenya</p>
   <p>4. Sri Lanka</p>
   <p>5. Turkey</p>
   <a href="https://farrerscoffee.co.uk/top-10-tea-producing-countries-in-the-world-2020/">Source Link Here</a>
-  <!--header, image, list, source information--!>
+  <!--header, image, list, source information!>
 
 
   </body>
